k8s/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-depl
  template:
    metadata:
      labels:
        app: products-depl
    spec:
      containers:
      - name: products-depl
        image: python-microservices-products
        imagePullPolicy: Never
        ports:
        - containerPort: 3002
