k8s/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-svc
spec:
  type: NodePort
  selector:
    app: products-depl
  ports:
  - port: 3002
    targetPort: 3002
    protocol: TCP
