k8s/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-svc
spec:
  type: NodePort
  selector:
    app: users-depl
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
